# Customer-Support-RAG-System

./: Dockerfile  README.md  env.example  pyproject.toml  requirements.txt
data/processed/: all_documents.json
data/raw/: branches.json  menu.json  notes.json
src/: app.py  config.py
src/evaluation/: evaluate.py  observation.txt  test_questions.json
src/generation/: chain.py
src/helpers/: process_data.py
src/ingestion/: data_loader.py
src/jobs/: build_index.py
src/processing/: chunking.py  metadata.py
src/retrieval/: semantic_retrieval.py
src/static/: styles.css
src/templates/: index.html
src/vectorstore/: embeddings.py  pinecone.py
